# sqlmodel_

./: .env  pyproject.toml
ormsqlmodel/: main.py
ormsqlmodel/config/: db.py
