[tool.poetry]
name = "ormsqlmodel"
version = "0.1.0"
description = ""
authors = ["ChaudhryBassamTanvir <chbassamtanvir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.21"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.8.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
fastapi = "^0.112.2"
[tool.poetry.scripts]
dev = "ormsqlmodel.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
